game deloper title added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">ALEC TAYLOR</h1>
     <h5 class="w3-hide-large" style="black-space:nowrap">ALEC TAYLOR</h5>
     <h3 class="w3-hide-medium w3-hide-small">PHOTOGRAPHER</h3>
+	<h3 class="w3-hide-medium w3-hide-small">GAME DEVELOPER</h3>
   </div>
   
   <!-- Navbar (placed at the bottom of the header image) -->
