added cv page and style page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
 <html lang="en">
-<title>W3.CSS Template</title>
+<title>Personal Website home</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -9,12 +9,15 @@
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-center" style="max-width:1500px">
-  <img class="w3-image" src="C:\Users\Alec\Documents\GitHub\FuzzyFox27.github.io\placeholderimage.jpg" alt="Me" width="1500" height="600">
+  <img class="w3-image" src="placeholderimage.jpg" alt="Me" width="1500" height="600">
   <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-light-grey w3-center">
     <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">ALEC TAYLOR</h1>
-    <h5 class="w3-hide-large" style="black-space:nowrap">ALEC TAYLOR</h5>
+    <h3 class="w3-hide-large" style="black-space:nowrap">ALEC TAYLOR</h3>
     <h3 class="w3-hide-medium w3-hide-small">PHOTOGRAPHER</h3>
 	<h3 class="w3-hide-medium w3-hide-small">GAME DEVELOPER</h3>
+	<h5 class="w3-hide-large w3-hide-large">PHOTOGRAPHER</h5>
+	<h5 class="w3-hide-large w3-hide-large">GAME DEVELOPER</h5>
+
   </div>
   
   <!-- Navbar (placed at the bottom of the header image) -->
@@ -22,6 +25,7 @@
     <a href="#" class="w3-bar-item w3-button">Home</a>
     <a href="#portfolio" class="w3-bar-item w3-button">Portfolio</a>
     <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+	<a href="/cv.html" class="w3-bar-item w3-button">CV</a>
   </div>
 </header>
 
@@ -37,11 +41,13 @@
 <div class="w3-content w3-padding-large w3-margin-top" id="portfolio">
 
   <!-- Images (Portfolio) -->
-  <img src="/w3images/ocean.jpg" alt="Ocean" class="w3-image" width="1000" height="500">
-  <img src="/w3images/ocean2.jpg" alt="Ocean II" class="w3-image w3-margin-top" width="1000" height="500">
+  <img src="nullimage.png" alt="personal image" class="w3-image" width="360" height="360">
+  <span> example text </span>
+  
+  <!--<img src="/w3images/ocean2.jpg" alt="Ocean II" class="w3-image w3-margin-top" width="1000" height="500">
   <img src="/w3images/falls2.jpg" alt="Falls" class="w3-image w3-margin-top" width="1000" height="500">
   <img src="/w3images/mountainskies.jpg" alt="Skies" class="w3-image w3-margin-top" width="1000" height="500">
-  <img src="/w3images/mountains2.jpg" alt="Mountains" class="w3-image w3-margin-top" width="1000" height="500">
+  <img src="/w3images/mountains2.jpg" alt="Mountains" class="w3-image w3-margin-top" width="1000" height="500">-->
 
   <!-- Contact -->
   <div class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top" id="contact">
