--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <a href="#" class="w3-bar-item w3-button">Home</a>
   <a href="#portfolio" class="w3-bar-item w3-button">Portfolio</a>
   <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+  <a href="/cv.html" class="w3-bar-item w3-button">CV</a>
 </div>
 </div>
 <!-- Page content -->
