--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <title>Personal Website home</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="/index-stylesheet.css">
 <body>
 
 <!-- Header -->
 <header class="w3-display-container w3-content w3-center" style="max-width:1500px">
-  <img class="w3-image" src="placeholderimage.jpg" alt="Me" width="1500" height="600">
+  <img class="w3-image" src="placeholderimage.jpg" alt="Me" width="1200" height="300">
   <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-light-grey w3-center">
     <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">ALEC TAYLOR</h1>
     <h3 class="w3-hide-large" style="black-space:nowrap">ALEC TAYLOR</h3>
@@ -22,8 +22,8 @@
   
   <!-- Navbar (placed at the bottom of the header image) -->
   <div class="w3-bar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
-    <a href="#" class="w3-bar-item w3-button">Home</a>
-    <a href="#portfolio" class="w3-bar-item w3-button">Portfolio</a>
+    <a href="/index.html" class="w3-bar-item w3-button">Home</a>
+    <a href="/Portfolio.html" class="w3-bar-item w3-button">Portfolio</a>
     <a href="#contact" class="w3-bar-item w3-button">Contact</a>
 	<a href="/cv.html" class="w3-bar-item w3-button">CV</a>
   </div>
@@ -43,7 +43,7 @@
 
   <!-- Images (Portfolio) -->
   <img src="nullimage.png" alt="personal image" class="w3-image" width="360" height="360">
-  <span> example text </span>
+  <span> About me info </span>
   
   <!--<img src="/w3images/ocean2.jpg" alt="Ocean II" class="w3-image w3-margin-top" width="1000" height="500">
   <img src="/w3images/falls2.jpg" alt="Falls" class="w3-image w3-margin-top" width="1000" height="500">
@@ -71,12 +71,10 @@
       </div>
       <button type="submit" class="w3-button w3-block w3-dark-grey">Send</button>
     </form><br>
-    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 
   </div>
 
 <!-- End page content -->
 </div>
-
 </body>
 </html>
