--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <img src="/Davids TT/TT humber bridge (1 of 1).jpg" alt="John" style="width:100%">
       <h3>Autumn Audi Shoot</h3>
       <p class="w3-opacity">Humber Bridge & Lincolnshire Wolds</p>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+      <p>.</p>
       <p><button onclick="document.getElementById('id02').style.display='block' "class="w3-button w3-light-grey w3-block">View Details</button></p>
     </div>
           <!-- The Modal -->
@@ -156,7 +156,7 @@
                     <img style="width: 100%;"src="/Davids TT/TT Autumn Road2 (1 of 1).jpg" alt="Snow" onclick="myFunction(this);">
                   </div>
                   <div class="column">
-                    <img  style="width: 100%;"src="/Davids" alt="Mountains" onclick="myFunction(this);">
+                    <img  style="width: 100%;"src="/FD" alt="Mountains" onclick="myFunction(this);">
                   </div>
                   <div class="column">
                     <img style="width: 100%;"src="/Davids TT/TT humber bridge2 (1 of 1).jpg" alt="Lights" onclick="myFunction(this);"">
@@ -190,24 +190,10 @@
         </div>
 
     <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
+      <img src="/w3images/team1.jpg" alt="null" style="width:100%">
       <h3>Steel Wool Shoot</h3>
       <p class="w3-opacity">Lincoln City Arberetum</p>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="/w3images/team3.jpg" alt="Mike" style="width:100%">
-      <h3>Mike Ross</h3>
-      <p class="w3-opacity">Architect</p>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
-      <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
-    </div>
-    <div class="w3-col l3 m6 w3-margin-bottom">
-      <img src="/w3images/team4.jpg" alt="Dan" style="width:100%">
-      <h3>Dan Star</h3>
-      <p class="w3-opacity">Architect</p>
-      <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+      <p>.</p>
       <p><button class="w3-button w3-light-grey w3-block">Contact</button></p>
     </div>
   </div>
@@ -297,13 +283,13 @@
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Spectrum Cleaning - Operator</h5>
           <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2020 - <span class="w3-tag w3-black w3-round">Current</span></h6>
-          <p>Lorem ipsum dolor sit amet. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+          <p>Example Text.</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Dominoes - In Store Crew</b></h5>
           <h6 class="w3-text-black"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 - Dec 2014</h6>
-          <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+          <p>Example Text.</p>
           <hr>
         </div>
       </div>
