changed cover image

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </div>
 <!-- Header -->
 <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
- <img class="w3-image" src="topimage.png" alt="Architecture" width="1500" height="100">
+ <img class="w3-image" src="topimage2.png" alt="Architecture" width="1500" height="100">
   <div class="w3-display-middle w3-margin-top w3-center">
     <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-white w3-opacity-min"><b>Alec Taylor</b><br></span> <span class="w3-hide-small w3-text-light-grey"></span>Programmer<br>Photographer</h1>
   </div>
