fixed error on cover image

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
   </div>
 
      <!-- CV Section -->
-     <div class="w3-container w3-padding-32" id="projects">
+     <div class="w3-container w3-padding-32" id="CV">
       <div class="w3-opacity">
         <span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></span> 
         <div class="w3-clear"></div>
