cleanup before publish

--- a/index.html
+++ b/index.html
@@ -36,15 +36,11 @@
 <div class="w3-content w3-padding" style="max-width:1564px">
 
   <!-- About Section -->
-  <div class="w3-container w3-padding-32" id="about">
     <header class="w3-center">
       <div class="w3-container w3-padding-32" id="About">
-        <div class="w3-opacity">
-          <span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></span> 
-          <div class="w3-clear"></div>
           <header class="w3-center w3-margin-bottom w3-border-bottom"></header>
-      <h1><b>About</b></h1>
-      </header>
+      <div class = "w3-opacity"><h1><b>About</b></h1>   </div>   
+
       <p>I am a strongly driven and inherently ambitious person with an aptitude for photography and computing. From a young age, I was fascinated with how things worked and would constantly question objects in my environment which sparked a pursuit of technical knowledge. 
         This pursuit continued and matured at school into a desire for success as I began to delve into business, economics and politics to craft a good understanding of the world and how things operate in it. During this time at college, I decided to major in computing 
         as it better supported my hobbies at the time which included computer hardware, programming and media content creation.<br><br> After turning 18 and getting into the University of Lincoln my ambition only grew with independence as I started travelling up and down the country,
@@ -56,6 +52,7 @@
          I had produced. I am currently studying a masters degree in computer science while keeping up with photography and videogrophy as i can while the world and job climate recovers from the pandemic. I have recently purchased my first car and motorbike which has
          now got me keen on mechanics, of which i already have a somewhat good starting knowladge considering my dad is a self taught mechanic and classic car enthusiast.
         </p>
+      </header>
         <header class = "w3-center ">
         <h3>Hobbies</h3>
         <header class="w3-margin-bottom w3-border-bottom"></header>
@@ -72,7 +69,7 @@
 <span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></span> 
 <div class="w3-clear"></div>
 <header class="w3-center w3-margin-bottom w3-border-bottom">
-<h1><b>PHOTOLIO</b></h1>
+<h1><b>Photography</b></h1>
 <p class="w3-padding-16"><button class="w3-button w3-black" onclick="myFunction()">Toggle Grid Padding</button></p>
 </header>
 </div>
