--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
 </header>
 
 <!-- Page content -->
-<div class="w3-content w3-padding" style="max-width:1564px">
+<div class="w3-content w3-padding" style="max-width:1564px"> 
 
   <!-- About Section -->
     <header class="w3-center">
       <div class="w3-container w3-padding-32" id="About">
+          <span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></span> 
           <header class="w3-center w3-margin-bottom w3-border-bottom"></header>
-      <div class = "w3-opacity"><h1><b>About</b></h1>   </div>   
+      <h1 class="w3-opacity"><b>About</b></h1>      
 
       <p>I am a strongly driven and inherently ambitious person with an aptitude for photography and computing. From a young age, I was fascinated with how things worked and would constantly question objects in my environment which sparked a pursuit of technical knowledge. 
         This pursuit continued and matured at school into a desire for success as I began to delve into business, economics and politics to craft a good understanding of the world and how things operate in it. During this time at college, I decided to major in computing 
@@ -61,7 +62,6 @@
         <header class=" w3-margin-bottom w3-border-bottom"></header>
         </header>
       
-  </div>
 <!-- Photogrophy Project Section -->
 <div class="w3-container w3-padding-32" id="PhotogrophyProjects">
   <!-- Header -->
@@ -69,7 +69,7 @@
 <span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></span> 
 <div class="w3-clear"></div>
 <header class="w3-center w3-margin-bottom w3-border-bottom">
-<h1><b>Photography</b></h1>
+<h1><b>PHOTOLIO</b></h1>
 <p class="w3-padding-16"><button class="w3-button w3-black" onclick="myFunction()">Toggle Grid Padding</button></p>
 </header>
 </div>
@@ -413,3 +413,4 @@
     </script>
 </body>
 </html>
+</div>
