fixed padding issues

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h3>Hobbies</h3>
         <header class="w3-margin-bottom w3-border-bottom"></header>
         
-        <p>Porgamming&nbsp;&nbsp;&nbsp;&nbsp;Photography&nbsp;&nbsp;&nbsp;&nbsp;Videogrophy&nbsp;&nbsp;&nbsp;&nbsp;Business & Politics&nbsp;&nbsp;&nbsp;&nbsp;Motoring & Mechanics&nbsp;&nbsp;&nbsp;&nbsp;Computer Hardware&nbsp;&nbsp;&nbsp;&nbsp;Science & Science Fiction&nbsp;&nbsp;&nbsp;&nbsp;Travelling&nbsp;&nbsp;&nbsp;&nbsp;Hiking&nbsp;&nbsp;&nbsp;&nbsp;</p>
+        <p>Programming&nbsp;&nbsp;&nbsp;&nbsp;Photography&nbsp;&nbsp;&nbsp;&nbsp;Videogrophy&nbsp;&nbsp;&nbsp;&nbsp;Business & Politics&nbsp;&nbsp;&nbsp;&nbsp;Motoring & Mechanics&nbsp;&nbsp;&nbsp;&nbsp;Computer Hardware&nbsp;&nbsp;&nbsp;&nbsp;Science & Science Fiction&nbsp;&nbsp;&nbsp;&nbsp;Travelling&nbsp;&nbsp;&nbsp;&nbsp;Hiking&nbsp;&nbsp;&nbsp;&nbsp;</p>
         <header class=" w3-margin-bottom w3-border-bottom"></header>
         </header>
       
@@ -239,7 +239,7 @@
     </div>
 
     <div class="w3-third">
-      <iframe width="480" height="252" src="https://www.youtube.com/embed/s3KIZAhehIY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="480" height="252" src="https://www.youtube.com/embed/cb_kfRc1Cj0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <iframe width="480" height="252" src="https://www.youtube.com/embed/CsdMMEZ2P2s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <iframe width="480" height="252" src="https://www.youtube.com/embed/MuFeTC-k3jk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <iframe width="480" height="252" src="https://www.youtube.com/embed/IRzMiUvcVzs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
