move toggle padding below underline

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="#home" class="w3-bar-item w3-button"><b>Alec R.</b> Taylor</a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="#about" class="w3-bar-item w3-button">About</a>
+      <a href="#About" class="w3-bar-item w3-button">About</a>
       <a href="#PhotogrophyProjects" class="w3-bar-item w3-button">Photography</a>
       <a href="#projects" class="w3-bar-item w3-button">Computing</a>
       <a href="#Videogrophy" class="w3-bar-item w3-button">Videogrophy</a>
@@ -36,11 +36,11 @@
 <div class="w3-content w3-padding" style="max-width:1564px"> 
 
   <!-- About Section -->
-    <header class="w3-center">
-      <div class="w3-container w3-padding-32" id="About">
+    <header class="w3-center"id="About">
+      <div class="w3-container w3-padding-32">
           <span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></span> 
-          <header class="w3-center w3-margin-bottom w3-border-bottom"></header>
-      <h1 class="w3-opacity"><b>About</b></h1>      
+      <h1 class="w3-opacity"><b>About</b></h1> 
+      <header class="w3-center w3-margin-bottom w3-border-bottom"></header>     
 
       <p>I am a strongly driven and inherently ambitious person with an aptitude for photography and computing. From a young age, I was fascinated with how things worked and would constantly question objects in my environment which sparked a pursuit of technical knowledge. 
         This pursuit continued and matured at school into a desire for success as I began to delve into business, economics and politics to craft a good understanding of the world and how things operate in it. During this time at college, I decided to major in computing 
@@ -69,9 +69,9 @@
 <span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></span> 
 <div class="w3-clear"></div>
 <header class="w3-center w3-margin-bottom w3-border-bottom">
-<h1><b>PHOTOLIO</b></h1>
-<p class="w3-padding-16"><button class="w3-button w3-black" onclick="myFunction()">Toggle Grid Padding</button></p>
-</header>
+<h1><b>Photography</b></h1></header>
+<p class="w3-padding-16 w3-center"><button class="w3-button w3-black" onclick="myFunction()">Toggle Grid Padding</button></p>
+
 </div>
 
 <!-- Photo Grid -->
