--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></span> 
         <div class="w3-clear"></div>
         <header class="w3-center w3-margin-bottom w3-border-bottom">
-        <h1><b>videography</b></h1>
+        <h1><b>Videography</b></h1>
         </header>
       </div>
 
